--- a/public/css/media-show.css
+++ b/public/css/media-show.css
@@ -272,31 +272,6 @@ body {
     background: transparent;
 }
 
-.nav-content {
-    display: flex;
-    gap: 12px;
-    background: transparent;
-}
-
-.nav-content img {
-    width: 160px;
-    height: 110px;
-    object-fit: cover;
-}
-
-.nav-text {
-    flex: 1;
-    background: transparent;
-}
-
-.nav-label {
-    font-family: var(--font-family);
-    font-size: 14px;
-    color: #A1A1AA;
-    overflow: hidden;
-    background: transparent;
-}
-
 /* Main Content */
 .article-content {
     font-size: 16px;
@@ -485,7 +460,7 @@ body {
 
     .hero-section h1 {
         bottom: -75px;
-        font-size: 32px;
+        font-size: 28px;
         font-weight: 500;
         padding-left: 30px;
         z-index: 2;
@@ -521,5 +496,12 @@ body {
         padding: 60px 0;
         margin: 0 auto;
         text-align: center;
+    }
+
+    .card-podcast {
+        position: absolute;
+        top: 100px;
+        left: 0px;
+        border-radius: 0px;
     }
 }
