--- a/public/css/report-show.css
+++ b/public/css/report-show.css
@@ -437,6 +437,9 @@ body {
         display: flex;
         flex-direction: column;
         gap: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 150px;
     }
 
     .content-container {
@@ -495,6 +498,15 @@ body {
     .form-group input {
         padding: 10px 0px 10px 0px;
         font-size: 14px;
+    }
+
+    .image-left {
+        width: auto;
+        height: 420px;
+    }
+
+    .company-details {
+        padding: 10px 20px 0 20px;
     }
 }
 
