--- a/public/css/home.css
+++ b/public/css/home.css
@@ -58,14 +58,13 @@
 /* Reset & Base Styles */
 * {
     font-family: var(--font-family);
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
 
 html, body {
     overflow-x: hidden;
     width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -126,6 +125,7 @@ body {
     line-height: 1.1;
     bottom: 180px;
     padding-left: var(--spacing-xl);
+    padding-right: var(--spacing-xl);
     color: var(--color-white);
 }
 
@@ -684,12 +684,13 @@ textarea[name="message"] {
     padding: var(--spacing-section) 0;
     color: var(--color-white);
     position: relative;
+    max-width: 1350px;
+    margin: 0 auto;
 }
 
 .section-title {
     position: absolute;
     top: var(--spacing-section);
-    left: var(--spacing-section);
     font-size: var(--font-size-5xl);
     font-weight: 300;
     color: var(--color-white);
@@ -840,6 +841,13 @@ textarea[name="message"] {
 
 .dot.active {
     background: var(--color-accent);
+}
+
+@media (max-width: 1200px) {
+    .center-text {
+        font-size: 90px;
+        bottom: 200px;
+    }
 }
 
 @media (max-width: 768px) {
