--- a/public/css/media.css
+++ b/public/css/media.css
@@ -167,6 +167,7 @@ a {
     color: var(--color-white);
     font-size: var(--font-size-2xl);
     margin: 0;
+    padding-right: 30px;
     font-weight: 500;
     line-height: 1.3;
     display: -webkit-box;
