--- a/public/css/portfolio-show.css
+++ b/public/css/portfolio-show.css
@@ -66,7 +66,7 @@ body {
     display: flex;
     flex-direction: column;
     background-size: cover;
-    background-position: center;
+    background-position: center - 50px;
     background-repeat: no-repeat;
     position: relative;
     z-index: 1;
