--- a/public/css/platform-show.css
+++ b/public/css/platform-show.css
@@ -140,9 +140,9 @@ html, body {
     width: 100%;
     height: 50%;
     background: linear-gradient(to top,
-        #131313 0%,
-        #131313 30%,
-        #131313 100%
+        rgba(19, 19, 19, 1) 0%,
+        rgba(19, 19, 19, 0.8) 30%,
+        rgba(19, 19, 19, 0) 100%
     );
     z-index: -5;
 }
@@ -846,6 +846,8 @@ html, body {
 .platform-image-containter-horizontal{
     width: 100%;
     height: 360px;
+    max-width: 1450px;
+margin: 0 auto;
 }
 
 .platform-video-large {
