--- a/public/css/portfolio-show.css
+++ b/public/css/portfolio-show.css
@@ -57,6 +57,8 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    max-width: 1500px;
+margin: 0 auto;
 }
 
 .hero-content {
@@ -65,7 +67,7 @@ body {
     min-height: 560px;
     display: flex;
     flex-direction: column;
-    background-size: cover;
+    background-size: auto;
     background-position: center - 50px;
     background-repeat: no-repeat;
     position: relative;
