--- a/public/css/platform-apply.css
+++ b/public/css/platform-apply.css
@@ -713,6 +713,26 @@ body {
     margin-right: -280px;
 }
 
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    font-family: var(--font-family);
+}
+
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
 
 
 /* Responsive Design */
