--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -391,6 +391,14 @@ body.menu-open {
         flex-wrap: wrap;
     }
 
+    .nav-right {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-left: 0px;
+        padding-bottom :50px;
+    }
+
 
 }
 
@@ -436,7 +444,7 @@ body.menu-open {
         gap: 24px;
         align-items: center;
         justify-content: center;
-        margin-bottom: 32px;
+        margin-bottom: 0px;
         text-align: center;
     }
 
@@ -457,6 +465,15 @@ body.menu-open {
     .search-icon{
         visibility: hidden;
     }
+
+    .nav-right {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-left: 0px;
+        padding-bottom :50px;
+    }
+
 }
 
 /* Small Screen Adjustments */
@@ -477,5 +494,7 @@ body.menu-open {
     .language-selector {
         gap: 12px;
     }
+
+
 }
 
