--- a/public/css/customer-care.css
+++ b/public/css/customer-care.css
@@ -529,9 +529,9 @@ body {
 
 .masonry-grid-investment-section-sub {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 24px;
-    padding: 0;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+    padding: 40px;
     margin: 0px auto;
     opacity: 1;
     transition: opacity 0.3s ease;
@@ -663,12 +663,20 @@ body {
 }
 
 .grid-headline-title-card-sub {
-    padding: 0px 30px 0px 0px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px 30px 0px 30px;
     color: #ffffff;
-    display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 15px;
+    height: 200px;
+    width:270px;
+    margin-left: -110px;
+}
+
+.card-custcare-content{
+    width: 270px;
 }
 
 .grid-headline-title-card-sub-large {
@@ -726,7 +734,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 0px;
+    margin-bottom: 25px;
 }
 
 .card-icon img {
@@ -742,6 +750,7 @@ body {
     margin: 0;
     color: #ffffff;
     font-family: var(--font-family);
+    margin-bottom: 10px;
 }
 
 .card-description {
@@ -756,14 +765,18 @@ body {
 
 .card-title-bottom {
     font-size: 20px;
-    color: #EFA32F;
+    color: #131313;
     font-family: var(--font-family);
-    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 50px;
+    height: 50px;
     text-align: center;
+    background-color: #EFA32F;;
+    border-radius: 50%;
+    padding: 3px 13px 0;
+    margin-left: 20px;
 }
 
 .card-title-sub-bottom {
@@ -847,7 +860,7 @@ body {
 
 
 .headline-section {
-    padding-top: 0px;
+    padding-top: 150px;
     padding-bottom: 80px;
     max-width: 1450px;
     margin: 0 auto;
@@ -958,7 +971,32 @@ body {
 /* Responsive Design */
 @media (max-width: 768px) {
 
+    .center-text{
+        font-size: 48px;
+    }
 
+    .headline-title{
+        text-align: center;
+        margin: 20px auto;
+    }
+
+    .masonry-grid-investment-section{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .headline-grid-four{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .headline-card.middle-border{
+        border-right: 0px;
+        border-left: 0px;
+    }
+
+    .headline-card.left-border{
+        border-right: 0px;
+        border-left: 0px;
+    }
 
     .hero-section {
         height: 400px;
