--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -1419,6 +1419,38 @@ body {
 
 
 
+.form-group select {
+    padding: 0.75rem 1rem;
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(217, 217, 217, 0.1);
+    border-radius: 8px;
+    color: white;
+    font-size: 1rem;
+    width: 107%;
+}
+
+.form-group select::placeholder {
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.form-group select:focus {
+    outline: none;
+    border-color: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.15);
+}
+
+/* Custom Select Styles */
+select {
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg width='12' height='8' viewBox='0 0 12 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L6 6L11 1' stroke='white' stroke-width='2'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 1rem center;
+    padding-right: 2.5rem;
+}
+
+
+
+
 .for-investor-section {
     color: #ffffff;
     display: flex;
