--- a/public/css/about.css
+++ b/public/css/about.css
@@ -26,6 +26,7 @@
 
     /* Typography */
     --font-family: 'Avenir LT Std', sans-serif;
+    --font-size-temp: 16px;
 
     /* Spacing */
     --spacing-xs: 4px;
@@ -157,7 +158,7 @@ body {
 
 .header-cell {
     color: var(--color-white);
-    font-size: 14px;
+    font-size: --font-size-temp;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 0.05em;
@@ -508,6 +509,13 @@ body {
     line-height: 1.2;
 }
 
+.features-title p {
+    font-family: var(--font-family);
+    font-size: --font-size-temp;
+    color: var(--color-gray-400);
+    margin: 0;
+}
+
 .feature-content h3 {
     font-family: var(--font-family);
     font-size: 20px;
@@ -518,7 +526,7 @@ body {
 
 .feature-content p {
     font-family: var(--font-family);
-    font-size: 14px;
+    font-size: --font-size-temp;
     color: var(--color-gray-400);
     margin: 0;
 }
@@ -677,7 +685,7 @@ body {
 .headline-card p {
     font-family: var(--font-family);
     color: var(--color-gray-400);
-    font-size: 14px;
+    font-size: --font-size-temp;
     line-height: 1.5;
     margin-bottom: 16px;
 }
@@ -716,7 +724,7 @@ body {
     position: relative;
     font-family: var(--font-family);
     color: var(--color-white);
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
     text-align: left;
     margin-left: 0px;
@@ -770,7 +778,7 @@ body {
 
 .category {
     font-family: var(--font-family);
-    font-size: 14px;
+    font-size: --font-size-temp;
     position: absolute;
     top: 80px;
     left: 20px;
@@ -782,7 +790,8 @@ body {
 .category-highlight {
     font-family: var(--font-family);
     padding-top: 100px;
-    font-size: 14px;
+    padding-bottom: 5px;
+    font-size: 18px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -795,7 +804,7 @@ body {
 
 .card-ecosystem-content-highlight {
     font-family: var(--font-family);
-    font-size: 14px;
+    font-size: 16px;
     position: relative;
     color: #ffffff;
     line-height: 20px;
@@ -846,7 +855,7 @@ body {
 .card h2 {
     font-family: var(--font-family);
     color: var(--color-white);
-    font-size: 14px;
+    font-size: --font-size-temp;
     margin: 0;
     font-weight: 200;
     line-height: 1.3;
@@ -890,7 +899,7 @@ body {
     font-family: var(--font-family);
     padding: 6px 16px;
     border-radius: 50px;
-    font-size: 14px;
+    font-size: --font-size-temp;
     font-weight: 500;
 
 }
@@ -1147,7 +1156,7 @@ body {
 }
 
 .card-ecosystem-hover h2 {
-    font-size: 14px;
+    font-size: --font-size-temp;
     font-family: var(--font-family);
     color: #EFA32F;
     margin: 5px;
@@ -1155,28 +1164,28 @@ body {
 
 .card-ecosystem-hover p {
     color: var(--color-white);
-    font-size: 14px;
+    font-size: --font-size-temp;
     font-family: var(--font-family);
     margin: 5px 5px 10px 5px;
 }
 
 .card-ecosystem-hover h3 {
-    font-size: 14px;
+    font-size: --font-size-temp;
     font-family: var(--font-family);
     color: #EFA32F;
     margin: 5px;
 }
 
 .card-ecosystem-hover h4 {
-    font-size: 14px;
+    font-size: --font-size-temp;
     font-family: var(--font-family);
     color: #EFA32F;
     margin: 5px;
 }
 
 .card-ecosystem-hover h5 {
-    font-size: 14px;
-    font-family: var(--font-family);
+    font-size: --font-size-temp;
+    font-family: var(--font-fam ily);
     color: #EFA32F;
     margin: 5px;
 }
@@ -1261,7 +1270,7 @@ body {
 
 .category {
     font-family: var(--font-family);
-    font-size: 14px;
+    font-size: --font-size-temp;
     position: absolute;
     top: 160px;
     left: 30px;
@@ -1272,7 +1281,7 @@ body {
 
 .card-ecosystem-content {
     font-family: var(--font-family);
-    font-size: 14px;
+    font-size: --font-size-temp;
     position: absolute;
     color: #A1A1AA;
     top: 190px;
@@ -1293,11 +1302,10 @@ body {
 .date {
     font-family: var(--font-family);
     position: absolute;
-    font-size: 14px;
+    font-size: --font-size-temp;
     bottom: 30px;
     right: 30px;
-    color: #EAB308;
-    font-size: 14px;
+    color: #EAB308;;
     z-index: 2;
 }
 
@@ -1523,7 +1531,7 @@ body {
 
     .tag {
         padding: 6px 12px;
-        font-size: 14px;
+        font-size: --font-size-temp;
         border-radius: 12px;
     }
 
