--- a/public/css/about-14.css
+++ b/public/css/about-14.css
@@ -26,7 +26,6 @@
 
     /* Typography */
     --font-family: 'Avenir LT Std', sans-serif;
-    --font-size-temp: 16px;
 
     /* Spacing */
     --spacing-xs: 4px;
@@ -158,7 +157,7 @@ body {
 
 .header-cell {
     color: var(--color-white);
-    font-size: --font-size-temp;
+    font-size: 14px;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 0.05em;
@@ -501,19 +500,12 @@ body {
 
 .features-title {
     font-family: var(--font-family);
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 600;
     margin-bottom: 28px;
     margin-top: 0px;
     color: var(--color-white);
     line-height: 1.2;
-}
-
-.features-title p {
-    font-family: var(--font-family);
-    font-size: --font-size-temp;
-    color: var(--color-gray-400);
-    margin: 0;
 }
 
 .feature-content h3 {
@@ -526,7 +518,7 @@ body {
 
 .feature-content p {
     font-family: var(--font-family);
-    font-size: --font-size-temp;
+    font-size: 14px;
     color: var(--color-gray-400);
     margin: 0;
 }
@@ -685,7 +677,7 @@ body {
 .headline-card p {
     font-family: var(--font-family);
     color: var(--color-gray-400);
-    font-size: --font-size-temp;
+    font-size: 14px;
     line-height: 1.5;
     margin-bottom: 16px;
 }
@@ -724,7 +716,7 @@ body {
     position: relative;
     font-family: var(--font-family);
     color: var(--color-white);
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
     text-align: left;
     margin-left: 0px;
@@ -778,7 +770,7 @@ body {
 
 .category {
     font-family: var(--font-family);
-    font-size: --font-size-temp;
+    font-size: 14px;
     position: absolute;
     top: 80px;
     left: 20px;
@@ -790,8 +782,7 @@ body {
 .category-highlight {
     font-family: var(--font-family);
     padding-top: 100px;
-    padding-bottom: 5px;
-    font-size: 18px;
+    font-size: 14px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -804,7 +795,7 @@ body {
 
 .card-ecosystem-content-highlight {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: 14px;
     position: relative;
     color: #ffffff;
     line-height: 20px;
@@ -855,7 +846,7 @@ body {
 .card h2 {
     font-family: var(--font-family);
     color: var(--color-white);
-    font-size: --font-size-temp;
+    font-size: 14px;
     margin: 0;
     font-weight: 200;
     line-height: 1.3;
@@ -899,7 +890,7 @@ body {
     font-family: var(--font-family);
     padding: 6px 16px;
     border-radius: 50px;
-    font-size: --font-size-temp;
+    font-size: 14px;
     font-weight: 500;
 
 }
@@ -1156,7 +1147,7 @@ body {
 }
 
 .card-ecosystem-hover h2 {
-    font-size: --font-size-temp;
+    font-size: 14px;
     font-family: var(--font-family);
     color: #EFA32F;
     margin: 5px;
@@ -1164,28 +1155,28 @@ body {
 
 .card-ecosystem-hover p {
     color: var(--color-white);
-    font-size: --font-size-temp;
+    font-size: 14px;
     font-family: var(--font-family);
     margin: 5px 5px 10px 5px;
 }
 
 .card-ecosystem-hover h3 {
-    font-size: --font-size-temp;
+    font-size: 14px;
     font-family: var(--font-family);
     color: #EFA32F;
     margin: 5px;
 }
 
 .card-ecosystem-hover h4 {
-    font-size: --font-size-temp;
+    font-size: 14px;
     font-family: var(--font-family);
     color: #EFA32F;
     margin: 5px;
 }
 
 .card-ecosystem-hover h5 {
-    font-size: --font-size-temp;
-    font-family: var(--font-fam ily);
+    font-size: 14px;
+    font-family: var(--font-family);
     color: #EFA32F;
     margin: 5px;
 }
@@ -1270,7 +1261,7 @@ body {
 
 .category {
     font-family: var(--font-family);
-    font-size: --font-size-temp;
+    font-size: 14px;
     position: absolute;
     top: 160px;
     left: 30px;
@@ -1281,7 +1272,7 @@ body {
 
 .card-ecosystem-content {
     font-family: var(--font-family);
-    font-size: --font-size-temp;
+    font-size: 14px;
     position: absolute;
     color: #A1A1AA;
     top: 190px;
@@ -1302,10 +1293,11 @@ body {
 .date {
     font-family: var(--font-family);
     position: absolute;
-    font-size: --font-size-temp;
+    font-size: 14px;
     bottom: 30px;
     right: 30px;
-    color: #EAB308;;
+    color: #EAB308;
+    font-size: 14px;
     z-index: 2;
 }
 
@@ -1531,7 +1523,7 @@ body {
 
     .tag {
         padding: 6px 12px;
-        font-size: --font-size-temp;
+        font-size: 14px;
         border-radius: 12px;
     }
 
